deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersreports-dpl
  namespace: my-test-ns
  labels:
    app: usersreports-lbl
spec:
  selector:
    matchLabels:
      app: usersreports-lbl
  replicas: 1
  template:
    metadata:
      labels:
        app: usersreports-lbl
    spec:
      containers:
        - name: usersreports
          image: shpboris/usersreports
          ports:
            - containerPort: 8001
              protocol: TCP
