deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: usersreports-svc
  namespace: my-test-ns
  labels:
    app: usersreports-lbl
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  selector:
    app: usersreports-lbl
