deploy/deploy-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: my-test-ns
  name: usersreports-vs
spec:
  hosts:
    - "*"
  gateways:
    - my-test-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/report"
      route:
        - destination:
            port:
              number: 8001
            host: usersreports-svc
---
apiVersion: v1
kind: Service
metadata:
  name: usersreports-svc
  namespace: my-test-ns
  labels:
    app: usersreports-lbl
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  selector:
    app: usersreports-lbl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersreports-dpl
  namespace: my-test-ns
  labels:
    app: usersreports-lbl
spec:
  selector:
    matchLabels:
      app: usersreports-lbl
  replicas: 1
  template:
    metadata:
      labels:
        app: usersreports-lbl
    spec:
      containers:
        - name: usersreports
          image: shpboris/usersreports:in-mem
          ports:
            - containerPort: 8001
              protocol: TCP
